--- a/user/src/app/app.component.html
+++ b/user/src/app/app.component.html
@@ -1,7 +1,1 @@
-<h1 class="text-danger">Hi</h1>
-<router-outlet></router-outlet>
-<p class="text-danger">hello</p>
-
-<h1 class="display-4 text-center">Welcome to Bootstrap!</h1>
-
-<app-header>
+<app-header></app-header>
