--- a/user/src/app/layouts/category-navbar/category-navbar.component.css
+++ b/user/src/app/layouts/category-navbar/category-navbar.component.css
@@ -1,4 +1,9 @@
 nav{
     margin-top: 100px;
-    text-decoration: none;
+    height: 50px;
+    background-color: var(--navbar-footer-color);
+}
+.nav-link{
+    text-transform: uppercase;
+    color: var(--primary-color);
 }
