--- a/user/src/app/layouts/footer/footer.component.html
+++ b/user/src/app/layouts/footer/footer.component.html
@@ -1,1 +1,18 @@
-<p>footer works!</p>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="site-logo">CHALLENGE-HUB</div>
+                <div>
+                    <ul class="nav justify-content-center">
+                        <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Terms & Conditions</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                    </ul>
+                </div>
+                <p class="mb-2 mt-2">Copyright © 2024 Challenge Hub</p>
+            </div>
+        </div>
+    </div>
+</footer>
