--- a/user/src/styles.css
+++ b/user/src/styles.css
@@ -13,3 +13,16 @@ body{
     font-size: 12px;
     color: var(--body-text-color);
 }
+.site-logo{
+    padding: 5px 20px;
+    border-radius: 20px;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    
+}
+
+
+.nav-item .nav-link {
+    color: var(--primary-color) ; 
+  }
+  
