--- a/user/src/app/subscription-form/subscription-form.component.html
+++ b/user/src/app/subscription-form/subscription-form.component.html
@@ -1,1 +1,20 @@
-<p>subscription-form works!</p>
+<div class="card">
+    <div class="card-body">
+        <div class="text-center mt-3 mb-5">
+            <h3>SUBSCRIPTION FORM</h3>
+            <p class="m-auto subs-text">This is a Dummy text</p>
+            <form action="" class="form-inline mb-5">
+                <div class="form-group col-md-5">
+                    <input type="text" class="form-control shadow-effect" placeholder="Your Name">
+                </div>
+                <div class="form-group col-md-5">
+                    <input type="email" class="form-control shadow-effect" placeholder="Email Address">
+                </div>
+                <div class="col-md-2">
+                    <button class="btn btn-info btn-block btn-sub">SUBSCRIBE</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+</div>
