--- a/user/src/styles.css
+++ b/user/src/styles.css
@@ -25,4 +25,7 @@ body{
 .nav-item .nav-link {
     color: var(--primary-color) ; 
   }
-  
+  .card{
+    border: none;
+    box-shadow: 0px 0px 33px -10px rgba(71, 114, 254, 0.3);
+}
