Basic Home Page Done

--- a/user/src/app/app.component.html
+++ b/user/src/app/app.component.html
@@ -1,8 +1,13 @@
 <app-header></app-header>
 <app-category-navbar></app-category-navbar>
 <div class="app-body">
-    <app-post-card></app-post-card>
-    <app-subscription-form></app-subscription-form>
+    <router-outlet></router-outlet>
 </div>
+<div class="container mt-5 mb-5" >
+    <div class="d-flex justify-content-center ">
+        <app-subscription-form></app-subscription-form>
+    </div>
+</div>
+
 <app-footer></app-footer>
-<router-outlet></router-outlet>
+
