Home page finalized
Finalized home page UI

--- a/user/src/app/layouts/header/header.component.css
+++ b/user/src/app/layouts/header/header.component.css
@@ -4,4 +4,8 @@ header{
 .site-logo{
     text-decoration: none;
     font-size: 1.5rem;
+    /* padding: 5px 20px;
+    border-radius: 20px;
+    background-color: var(--secondary-color);
+    color: var(--primary-color); */
 }
