--- a/user/src/app/pages/home/home.component.html
+++ b/user/src/app/pages/home/home.component.html
@@ -10,6 +10,43 @@
             <div class="col-lg-3">
                 <app-post-card></app-post-card>
             </div>
+            <div class="col-lg-3">
+                <app-post-card></app-post-card>
+            </div>
+            <div class="col-lg-3">
+                <app-post-card></app-post-card>
+            </div>
+            <div class="col-lg-3">
+                <app-post-card></app-post-card>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="container mt-5">
+    <div class="col-md-12 text-center">
+        <h2>Latest Posts</h2>
+        <p> This is a Dummy text</p>
+    </div>
+    <div class="row">
+        <div class="col-md-4 mt-3">
+            <app-post-card></app-post-card>
+        </div>
+        <div class="col-md-4 mt-3">
+            <app-post-card></app-post-card>
+        </div>
+        <div class="col-md-4 mt-3">
+            <app-post-card></app-post-card>
+        </div>
+        <div class="col-md-4 mt-3">
+            <app-post-card></app-post-card>
+        </div>
+        <div class="col-md-4 mt-3">
+            <app-post-card></app-post-card>
+        </div>
+
+        <div class="col-md-4 mt-3">
+            <app-post-card></app-post-card>
         </div>
     </div>
 </section>
