--- a/user/src/styles.css
+++ b/user/src/styles.css
@@ -25,7 +25,14 @@ body{
 .nav-item .nav-link {
     color: var(--primary-color) ; 
   }
-  .card{
+.card{
     border: none;
     box-shadow: 0px 0px 33px -10px rgba(71, 114, 254, 0.3);
+}
+.shadow-effect{
+    border: none;
+    box-shadow: 0px 0px 33px -10px rgba(71, 114, 254, 0.3);
+}
+.bg-theme{
+    background-color: var(--primary-color);
 }
