--- a/user/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/user/src/app/layouts/category-navbar/category-navbar.component.html
@@ -2,9 +2,8 @@
     <div class="container">
         <div class="collapse navbar-collapse justify-content-center">
             <ul class="navbar-nav">
-                <li class="nav-item ml-3"><a href="" class="nav-link">Hackathons</a></li>
-                <li class="nav-item ml-3"><a href="" class="nav-link">Workshops</a></li>
-                <li class="nav-item ml-3"><a href="" class="nav-link">Sports Tournaments</a></li>
+                <li class="nav-item ml-3"><a href="" class="nav-link">Technology</a></li>
+                <li class="nav-item ml-3"><a href="" class="nav-link">Sports</a></li>
                 <li class="nav-item ml-3"><a href="" class="nav-link">Photography </a></li>
                 <li class="nav-item ml-3"><a href="" class="nav-link">Other </a></li>
             </ul>
