--- a/user/src/app/pages/single-post/single-post.component.html
+++ b/user/src/app/pages/single-post/single-post.component.html
@@ -1,1 +1,30 @@
-<p>single-post works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <div class="card shadow-effect">
+                <img src="https://th.bing.com/th/id/R.3a9f0210ff7d1e83039ff237c81bacae?rik=asArcL6qvWfZfA&riu=http%3a%2f%2fs1.picswalls.com%2fwallpapers%2f2016%2f03%2f29%2fbeautiful-nature-high-definition_042323787_304.jpg&ehk=8tO7UxFL%2bC03x6vfc2O9EhdUCe4fl6tC7UGUdlnpdX4%3d&risl=&pid=ImgRaw&r=0" alt="" class="card-img fluid">
+                <div class="card-body">
+                     <small class="bg-light text-danger text-center">Technology</small>
+                     <small class="bg-light text-sucess text-center ml-2">Featured</small>
+                     <small class="bg-light text-info text-center ml-2">Views-182,392</small>
+                     <small class="bg-light text-warning text-center ml-2">LAST UPDATED - SEP 2, 2021</small>
+
+                     <h1 class="mt-3 mb-3">Technology Competition 1.0</h1>
+                     <p>This is a dummy text.
+                        1111111111111111111111111111111111111111111111111111111111111111
+                        1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111
+                        11111111111111111111111111111111111111111111111111111333333333333333333333333333333333333333333
+                        4444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444
+                        66666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666666
+                     </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <app-post-card></app-post-card>
+            <app-post-card></app-post-card>
+            <app-post-card></app-post-card>
+        </div>
+        
+    </div>
+</div>
