--- a/user/src/styles.css
+++ b/user/src/styles.css
@@ -36,3 +36,21 @@ body{
 .bg-theme{
     background-color: var(--primary-color);
 }
+ 
+input[type="text"], input[type="email"]{
+  height: 60px;
+  padding-left: 20px;
+  font-size: 13px;
+  width: 99%;
+  border: none;
+ 
+}
+
+.btn-theme{
+  height: 58px;
+  border: none;
+  font-size: 13px;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  
+}
