--- a/user/src/app/pages/single-post/single-post.component.html
+++ b/user/src/app/pages/single-post/single-post.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-9">
             <div class="card shadow-effect">
-                <img src="https://th.bing.com/th/id/R.3a9f0210ff7d1e83039ff237c81bacae?rik=asArcL6qvWfZfA&riu=http%3a%2f%2fs1.picswalls.com%2fwallpapers%2f2016%2f03%2f29%2fbeautiful-nature-high-definition_042323787_304.jpg&ehk=8tO7UxFL%2bC03x6vfc2O9EhdUCe4fl6tC7UGUdlnpdX4%3d&risl=&pid=ImgRaw&r=0" alt="" class="card-img fluid">
+                <img src="https://cdn.pixabay.com/photo/2022/09/03/13/00/bench-7429540_640.jpg" alt="" class="card-img fluid">
                 <div class="card-body">
                      <small class="bg-light text-danger text-center">Technology</small>
                      <small class="bg-light text-sucess text-center ml-2">Featured</small>
@@ -19,6 +19,7 @@
                      </p>
                 </div>
             </div>
+            <app-comment-form></app-comment-form>
         </div>
         <div class="col-md-3">
             <app-post-card></app-post-card>
