--- a/user/src/app/subscription-form/subscription-form.component.html
+++ b/user/src/app/subscription-form/subscription-form.component.html
@@ -10,7 +10,7 @@
           <div class="form-group w-50 mx-2">
             <input type="email" class="form-control shadow-effect" placeholder="Email Address">
           </div>
-          <button class="btn btn-info btn-block btn-sub">SUBSCRIBE</button>
+          <button class="btn btn-info btn-block btn-theme">SUBSCRIBE</button>
         </form>
       </div>
     </div>
