--- a/user/src/app/comments/comment-list/comment-list.component.html
+++ b/user/src/app/comments/comment-list/comment-list.component.html
@@ -1,1 +1,38 @@
-<p>comment-list works!</p>
+<div class="card mb-5 mt-5 pb-5 shadow-effect">
+    <div class="card-body">
+        <h4 class="mt-3 mb-3"> Comments (12,234)</h4>
+        <div class="comment-box mt-3">
+            <h5 class="mb-0">John Doe</h5>
+            <small class="text-danger">LAST UPDATED - SEP 20, 2021</small>
+            <div class="mt-3 mb-3">
+                This is a dummy text.
+            </div>
+
+            <a href="#" class="comment mt-1">Reply</a>
+            <a href="#" class="comment mt-1 ml-3">View Reply</a>
+            <hr>
+        </div>
+        <div class="comment-box mt-3">
+            <h5 class="mb-0">John Doe</h5>
+            <small class="text-danger">LAST UPDATED - SEP 20, 2021</small>
+            <div class="mt-3 mb-3">
+                This is a dummy text.
+            </div>
+
+            <a href="#" class="comment mt-1">Reply</a>
+            <a href="#" class="comment mt-1 ml-3">View Reply</a>
+            <hr>
+        </div>
+        <div class="comment-box mt-3">
+            <h5 class="mb-0">John Doe</h5>
+            <small class="text-danger">LAST UPDATED - SEP 20, 2021</small>
+            <div class="mt-3 mb-3">
+                This is a dummy text.
+            </div>
+
+            <a href="#" class="comment mt-1">Reply</a>
+            <a href="#" class="comment mt-1 ml-3">View Reply</a>
+            <hr>
+        </div>
+    </div>
+</div>
