--- a/user/src/app/pages/single-post/single-post.component.html
+++ b/user/src/app/pages/single-post/single-post.component.html
@@ -20,6 +20,7 @@
                 </div>
             </div>
             <app-comment-form></app-comment-form>
+            <app-comment-list></app-comment-list>
         </div>
         <div class="col-md-3">
             <app-post-card></app-post-card>
