About Us page Done

--- a/user/src/app/pages/about-us/about-us.component.html
+++ b/user/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,21 @@
-<p>about-us works!</p>
+<section class="mt-5">
+    <div class="container mt-5 mb-5 p-5 bg-theme">
+        <h1 class="text-white text-center">About Us</h1>
+        <div class="p-5 mt-4 bg-secondary-theme text-theme-primary">
+            
+            <p>This is a Dummy text.
+                jsdjfkdjfkfnds  vlksdnv,s lskmdlknc kdnclakrioeurpqpwo[q[p[[d]]]klwdalsjgkhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+            </p>
+            <p>This is a Dummy text.
+                jsdjfkdjfkfnds  vlksdnv,s lskmdlknc kdnclakrioeurpqpwo[q[p[[d]]]]klwdalsjgkhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+            </p>
+            <p>This is a Dummy text.
+                jsdjfkdjfkfnds  vlksdnv,s lskmdlknc kdnclakrioeurpqpwo[q[p[[d]]]]klwdalsjgkhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+            </p>
+
+            <div class="text-center">
+                <button class="btn btn-info btn-sm mt-4 btn-theme">Back to Home</button>
+            </div>
+        </div>
+    </div>
+</section>
