--- a/user/src/app/layouts/post-card/post-card.component.html
+++ b/user/src/app/layouts/post-card/post-card.component.html
@@ -6,7 +6,7 @@
         <small class="bg-light text-info text-center ml-3">Views - 125,653</small>
 
         <h5 class="mt-1"> How to challenge</h5>
-        <p>This is a dummy text</p>
+        <p>Challenge here</p>
         <small class="bg-light text-warning text-center ml-3">LAST UPDATED - SEP 20, 2024 </small>
     </div>
 </div>
