--- a/user/src/app/pages/single-category/single-category.component.html
+++ b/user/src/app/pages/single-category/single-category.component.html
@@ -1,7 +1,7 @@
 <div class="bg-theme p-5">
 <div class="container">    
     <h1 class="text-white">General Knowledge</h1>
-    <p class="text-white">This is a Dummy Text.</p>
+    <p class="text-white">Improve your General Knowledge here.</p>
 </div>
 </div>
 <div class="container mt-5 mb-5">
